# cppl-homeworks

./: .gitignore  README.md
1.1/: 1.1.cpp  1.1.sln  1.1.vcxproj
1.2/: 1.2.cpp  1.2.sln  1.2.vcxproj
1.3/: 1.3.cpp  1.3.sln  1.3.vcxproj
10.1/: 10.1.cpp  10.1.sln  10.1.vcxproj
10.2/: 10.2.cpp  10.2.sln  10.2.vcxproj
10.3/: 10.3.cpp  10.3.sln  10.3.vcxproj
11.1/: 11.1.cpp  11.1.sln  11.1.vcxproj
11.2/: 11.2.cpp  11.2.sln  11.2.vcxproj
2.1/: 2.1.cpp  2.1.sln  2.1.vcxproj
2.2/: 2.2.cpp  2.2.sln  2.2.vcxproj  cube.cpp  cube.h
3.1/: 3.1.cpp  3.1.sln  3.1.vcxproj
3.2/: 3.2.cpp  3.2.sln  3.2.vcxproj
4.1/: 4.1.cpp  CMakeLists.txt  list_class.h  test-4.1.cpp
4.2/: 4.2.cpp  CMakeLists.txt  list_class.cpp  test-4.2.cpp
5.1/: 5.1.cpp  5.1.sln  5.1.vcxproj
5.2/: 5.2.cpp  5.2.sln  5.2.vcxproj
5.3/: 5.3.cpp  5.3.sln  5.3.vcxproj
7.1/: 7.1.cpp  7.1.sln  7.1.vcxproj
7.2/: 7.2.cpp  7.2.sln  7.2.vcxproj
7.3/: 7.3.cpp  7.3.sln  7.3.vcxproj
8.1/: 8.1.cpp  8.1.sln  8.1.vcxproj
8.2/: 8.2.cpp  8.2.sln  8.2.vcxproj
cppl-diplom/: cppl-diplom.cpp  cppl-diplom.sln  cppl-diplom.vcxproj  settings.ini
